# palabros

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/actions/poetry-publish/: action.yaml  entrypoint.sh
.github/actions/poetry-pypi/: Dockerfile  action.yaml  entrypoint.sh
.github/actions/poetry-tests/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: push-to-pypi.yml  push-to-testpypi-new.yml  push-to-testpypi.yml  test-app-code.yml
palabros/: business.py  console.py  database.py  errors.py  main.py  queries.py  schemas.py  words.json
tests/: base.py  test_business.py  test_schemas.py
