[tool.poetry]
name = "palabros"
version = "0.0.6"
description = "Este CLI no es más que clon de Wordle en español"
license = "MIT"
authors = ["Diego Herrera <vermicida@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vermicida/palabros"
keywords = [
    "juego",
    "game",
    "juegos",
    "games",
    "palabra",
    "word",
    "palabras",
    "words",
    "wordle",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
palabros = "palabros.main:app"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^11.1.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^6.2"}
darglint = "^1.8.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.0.0"
pyupgrade = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38"]
line-length = 119

[tool.isort]
profile = "black"
